# Fire_Drone_Gazebo_RtabMap-Customized-PX4-

./: README.md
models/real_fire/: model.config  model.sdf
models/real_fire/materials/scripts/: fire.material
src/fire_drone_bringup/: package.xml  setup.cfg  setup.py
src/fire_drone_bringup/fire_drone_bringup/: generate_runtime_urdf  initial_scan_mission.py  px4_odom_tf_publisher.py  px4_odom_to_ros.py  runtime_sdf_robot_state_publisher.py  velodyne_time_adapter.py
src/fire_drone_bringup/launch/: fire_perception_demo.launch.py  full_fire_mapping_mission.launch.py  new.launch.py  sim_px4_bridge.launch.py
src/fire_drone_bringup/rviz/: fire_drone_rtabmap.rviz
src/fire_drone_controller/: CMakeLists.txt  package.xml
src/fire_drone_controller/src/: fire_rtabmap_planner.cpp  nav2_path_follower.cpp  offboard_controller.cpp
src/fire_drone_interfaces/: CMakeLists.txt  package.xml
src/fire_drone_msgs/: CMakeLists.txt  package.xml
src/fire_drone_msgs/msg/: FireDetection.msg  SuppressionResult.msg
src/fire_drone_navigation/: CMakeLists.txt  package.xml
src/fire_drone_navigation/launch/: fire_explore_nav.launch.py  nav2_live_rtabmap.launch.py  navigate_to_area.launch.py
src/fire_drone_navigation/src/: fire_frontier_planner.cpp  fire_nav2_planner.cpp  height_filtered_map_node.cpp
src/fire_drone_perception/: CMakeLists.txt  package.xml
src/fire_drone_perception/src/: fire_detector.cpp
src/fire_drone_sim_cpp/: CMakeLists.txt  package.xml
src/fire_drone_sim_cpp/src/: fire_source_sim.cpp
